Conexão com o broker bem sucedida. (#1)
* Conexão com o banco de dados

* Configuração do Consumidor.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8082
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/db_email
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.addresses=amqps://jtjdjuen:Ke4y81Jhgn5c2TC45fMfb7bKasGI9RI2@possum.lmq.cloudamqp.com/jtjdjuen
+
+broker.queue.email.name=defaut.email
+
 spring.application.name=email-ms
