--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,11 @@ spring.rabbitmq.addresses=amqps://jtjdjuen:Ke4y81Jhgn5c2TC45fMfb7bKasGI9RI2@poss
 
 broker.queue.email.name=defaut.email
 
+spring.mail.host+=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eduardoramirodematos@gmail.com
+spring.mail.password=anev dahy eqtm qbif
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.application.name=email-ms
