--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://jtjdjuen:Ke4y81Jhgn5c2TC45fMfb7bKasGI9RI2@possum.lmq.cloudamqp.com/jtjdjuen
+spring.rabbitmq.addresses=URL BROKER
 
 broker.queue.email.name=defaut.email
 
-spring.mail.host+=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=eduardoramirodematos@gmail.com
-spring.mail.password=anev dahy eqtm qbif
+spring.mail.host+=SMTP ESCOLHIDO
+spring.mail.port=PORTA SMTP
+spring.mail.username=EMAIL REMETENTE
+spring.mail.password=SENHA GERADA
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
