Disponibilização da primeira versão do projeto (#2)
* Conexão com o banco de dados

* Configuração do Consumidor.

* Comunicação do producer, com o broker e com o consumer

* Comunicação do producer, com o broker e com o consumer

* Versão em funcionamento.

* Versão em funcionamento.

* Add files via upload

* Criaçao do readme.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,15 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://jtjdjuen:Ke4y81Jhgn5c2TC45fMfb7bKasGI9RI2@possum.lmq.cloudamqp.com/jtjdjuen
+spring.rabbitmq.addresses=URL BROKER
 
 broker.queue.email.name=defaut.email
+
+spring.mail.host+=SMTP ESCOLHIDO
+spring.mail.port=PORTA SMTP
+spring.mail.username=EMAIL REMETENTE
+spring.mail.password=SENHA GERADA
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.application.name=email-ms
