--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.rabbitmq.addresses=URL BROKER
 
 broker.queue.email.name=defaut.email
 
-spring.mail.host+=SMTP ESCOLHIDO
+spring.mail.host=SMTP ESCOLHIDO
 spring.mail.port=PORTA SMTP
 spring.mail.username=EMAIL REMETENTE
 spring.mail.password=SENHA GERADA
